--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 						BHT in Berlin im dritten Semester.</p>	
 				</div>
 				<img class="slideL" src="images/pt12.jpg" alt="Hannah im Van" title="pt12">	
+				<p>I am added</p>
 			</div>				
 			<div class="gridElement slideR" id="aboutMeDetails">
 				<h2>Mein Highlight ist natürlich Lissabon und Umgebung. </h2>
